Done: 0.5.4. Make Text to Texture objects for debug information (like FPS). Also fixed vulkan warnings when some stages were empty